# c2425-R4

./: .gitignore  README.md  data  pyproject.toml  requirements.txt
data/: data  data.txt  xgboost_P1.xgb  xgboost_P2.xgb
mlruns/0/: meta.yaml
mlruns/103891076235541516/: meta.yaml
mlruns/220531053739985843/: meta.yaml
mlruns/263253257679927349/: meta.yaml
mlruns/320980305061470274/: meta.yaml
mlruns/327116567849198651/: meta.yaml
mlruns/327375263980051994/: meta.yaml
mlruns/566389620710109100/: meta.yaml
mlruns/646509467343568420/: meta.yaml
mlruns/675175204993571592/: meta.yaml
mlruns/703997732876177540/: meta.yaml
mlruns/776087064029254202/: meta.yaml
mlruns/833879634940899382/: meta.yaml
mlruns/952129509267405796/: meta.yaml
mlruns/982980572228830669/: meta.yaml
mlruns/997402575962019860/: meta.yaml
src/: __main__.py  main.py  variables_df.txt
src/analisis/: Extraccion_Datos_Entrenamiento.py  RANKING_V3.ipynb  a.ipynb  analisis.ipynb  analisis2.ipynb  analisis3.ipynb  analisis_outliers_peleadores.ipynb  analisis_outliers_peleadores.py  analisis_outliers_peleas.ipynb  analisis_peleadores.ipynb  analisis_peleas ponderadas.ipynb  analisis_peleas.ipynb  analisis_peleas_ponderadas.ipynb  analisis_relaciones_variables_peleas.ipynb  df_peleas.csv  ranking.ipynb  ranking_v2.py
src/extraccion/: WebScrapCombates.py  divisor_df.py  main.py  primeras_peleas_ufc.csv  scraper_fecha_nacimiento.py  scraper_peleadores.py  scraper_peleadores_ufc _por_paginas.py  scraper_peleadores_ufc.py  scraper_peleas.py  scraper_tapology_bf.py  (+2 more)
(+323 files in other folders)
