[project]
name = "pd-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.2.3",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.29.0",
    "scikit-learn>=1.4.0",
    "beautifulsoup4>=4.13.3",
    "requests>=2.32.3",
    "ipython>=8.12.2",
    "bs4>=0.0.2",
    "pyarrow>=19.0.1",
    "xgboost>=2.1.4",
    "scipy>=1.15.2",
    "zscore>=0.1",
    "ipykernel>=6.29.5",
    "mlflow>=2.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
